--- a/khoBlog/templates/tailwind/card_container.html
+++ b/khoBlog/templates/tailwind/card_container.html
@@ -1,4 +1,4 @@
-{% load cards content_type super_buttons %}
+{% load cards content_type super_buttons heroicons %}
 
 <section{% if filter_form %} x-data="{ open: false }" aria-labelledby="filter-heading"{% endif %} class="relative divide-y-2 divide-gray-300 dark:divide-jumbo-600">
   <section>
@@ -18,9 +18,7 @@
         <!-- Filters -->
         <section class="w-auto">
           <button type="button" class="group text-gray-900 dark:text-jumbo-100 font-medium flex items-center" aria-controls="filters" @click="open = !open" aria-expanded="false" x-bind:aria-expanded="open.toString()">
-            <svg class="flex-none w-5 h-5 mr-2 text-gray-400 group-hover:text-gray-500" aria-hidden="true" x-description="Heroicon name: solid/filter" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
-              <path fill-rule="evenodd" d="M3 3a1 1 0 011-1h12a1 1 0 011 1v3a1 1 0 01-.293.707L12 11.414V15a1 1 0 01-.293.707l-2 2A1 1 0 018 17v-5.586L3.293 6.707A1 1 0 013 6V3z" clip-rule="evenodd"></path>
-            </svg>
+            {% heroicon_solid 'funnel' class="flex-none w-5 h-5 mr-2 text-gray-400 group-hover:text-gray-500" %}
             Filters
           </button>
           <div id="filter-heading" class="sr-only">Filters</div>
