--- a/khoBlog/templates/tailwind/changelog.html
+++ b/khoBlog/templates/tailwind/changelog.html
@@ -1,4 +1,4 @@
-{% load humanize %}
+{% load humanize heroicons %}
 
 <section class="flow-root mt-2">
   <ul role="list">
@@ -25,9 +25,7 @@
                   <div class="relative">
                     <a class="absolute top-6 text-xs text-cornflower-600 hover:underline dark:text-cornflower-200" href="{% url 'blog:post_category_list' slug='updates' %}">
                       Read changelog
-                      <svg xmlns="http://www.w3.org/2000/svg" class="h-3 w-3 inline" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M17 8l4 4m0 0l-4 4m4-4H3" />
-                      </svg>
+                      {% heroicon_mini 'arrow-long-right' class="h-4 w-4 inline" stroke_width=2 %}
                     </a>
                   </div>
                 {% endif %}
