--- a/khoBlog/templates/tailwind/super_buttons.html
+++ b/khoBlog/templates/tailwind/super_buttons.html
@@ -1,5 +1,5 @@
 {% if authenticated %}
-  {% load content_type %}
+  {% load content_type heroicons %}
 
   <section class="mt-4 flex shrink-0 space-x-3 md:mt-0">
     <div class="mx-auto w-full text-right">
@@ -18,9 +18,7 @@
           <span x-data="{ open: false }" @click="open=!open" @keydown.escape.stop="open = false" @click.away="open=false" class="-ml-px relative block">
             <button type="button" class="superbutton_dropdown_button" id="option-menu-button" x-ref="button" @keyup.space.prevent="onButtonEnter()" @keydown.enter.prevent="onButtonEnter()" aria-expanded="false" aria-haspopup="true" x-bind:aria-expanded="open.toString()" @keydown.arrow-up.prevent="onArrowUp()" @keydown.arrow-down.prevent="onArrowDown()">
               <span class="sr-only">Open options</span>
-              <svg class="h-5 w-5" x-description="Heroicon name: solid/chevron-down" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path>
-              </svg>
+              {% heroicon_mini 'chevron-down' class="w-5 h-5" stroke_width=2 %}
             </button>
 
             <div x-show="open" x-transition:enter="transition ease-out duration-100" x-transition:enter-start="opacity-0 scale-95" x-transition:enter-end="opacity-100 scale-100" x-transition:leave="transition ease-in duration-75" x-transition:leave-start="opacity-100 scale-100" x-transition:leave-end="opacity-0 scale-95" class="superbutton_dropdown_items" x-ref="menu-items" x-description="Dropdown menu, show/hide based on menu state." role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1" @keydown.arrow-up.prevent="onArrowUp()" @keydown.arrow-down.prevent="onArrowDown()" @keydown.tab="open = false" @keydown.enter.prevent="open = false" @keyup.space.prevent="open = false">
