--- a/khoBlog/templates/tailwind/super_buttons.html
+++ b/khoBlog/templates/tailwind/super_buttons.html
@@ -12,7 +12,7 @@
           {% endif %}
         {% endif %}
         {% if admin %}
-          <a href="{{ object.get_absolute_update_url }}" type="button" class="superbutton_main_action">
+          <a href="{% firstof object.get_absolute_update_url object.get_absolute_admin_update_url %}" type="button" class="superbutton_main_action">
             Edit {% if object|to_class_name != "customtag" %}{{ object|to_class_name }}{% else %}tag{% endif %}
           </a>
           <span x-data="{ open: false }" @click="open=!open" @keydown.escape.stop="open = false" @click.away="open=false" class="-ml-px relative block">
@@ -72,11 +72,13 @@
                   <a href="{{ object.get_absolute_clone_url }}" class="dropdown_item">Duplicate</a>
                 </div>
               {% endif %}
-              <div class="dropdown_item_container" role="none">
-                <a class="dropdown_item" href="{{ object.get_absolute_admin_update_url }}">
-                  Edit in Admin
-                </a>
-              </div>
+              {% if object.get_absolute_update_url and object.get_absolute_admin_update_url %}
+                <div class="dropdown_item_container" role="none">
+                  <a class="dropdown_item" href="{{ object.get_absolute_admin_update_url }}">
+                    Edit in Admin
+                  </a>
+                </div>
+              {% endif %}
               <div class="dropdown_item_container" role="none">
                 <a href="{{ object.get_absolute_delete_url }}" class="dropdown_item">Delete</a>
               </div>
