--- a/lyrics/templates/lyrics/song_detail.html
+++ b/lyrics/templates/lyrics/song_detail.html
@@ -4,9 +4,12 @@
 {% block content %}
   <article class="xl:grid xl:grid-cols-3">
     <div class="xl:col-span-2 xl:pr-8">
-      <div class="md:flex md:items-center md:justify-between md:space-x-4 xl:border-b xl:border-gray-200 dark:xl:border-jumbo-200 xl:pb-6">
+      <div class="md:flex md:items-center md:justify-between md:space-x-4 xl:border-b xl:border-gray-200 dark:xl:border-jumbo-700 xl:pb-6">
         <div>
           <span class="text-2xl font-bold text-gray-900 dark:text-jumbo-50">{{ song.title }}</span>
+          <p class="mt-2 text-sm text-gray-500 dark:text-jumbo-200">
+            By <a href="{{ song.artist.first.get_absolute_url }}" class="hover:underline font-bold">{{ song.artist.first }}</a>
+          </p>
         </div>
         {% sb song user=request.user %}
       </div>
@@ -15,7 +18,9 @@
           {% load markup_tags %}
           {{ song.lyrics|apply_markup:"markdown"|apply_markup:"widont" }}
 
-          <a href="{{ song.url_to_media }}" target="_blank" rel="noopener noreferrer">Find <span class="font-extrabold">{{ song }}</span>{% if not song.host == other %} on {{ song.get_host_display }}{% endif %}</a>
+          <div class="border-t border-jumbo-100 dark:border-jumbo-700 pt-5">
+            <a href="{{ song.url_to_media }}" target="_blank" rel="noopener noreferrer">Find <span class="font-extrabold">{{ song }}</span>{% if not song.host == other %} on {{ song.get_host_display }}{% endif %}</a>
+          </div>
         </div>
       </div>
   </article>
