--- a/lyrics/templates/lyrics/song_detail.html
+++ b/lyrics/templates/lyrics/song_detail.html
@@ -9,6 +9,15 @@
           <span class="text-2xl font-bold text-gray-900 dark:text-jumbo-50">{{ song.title }}</span>
           <p class="mt-2 text-sm text-gray-500 dark:text-jumbo-200">
             By <a href="{{ song.artist.first.get_absolute_url }}" class="hover:underline font-bold">{{ song.artist.first }}</a>
+            {% for artist in song.featuring_artist.all %}
+              {% if forloop.first %}
+                featuring
+              {% endif %}
+              <a href="{{ artist.get_absolute_url }}" class="hover:underline font-bold">{{ artist }}</a>
+              {% if not forloop.last %}
+                and
+              {% endif %}
+            {% endfor %}
           </p>
         </div>
         {% sb song user=request.user %}
