Very small fixes

--- a/khoBlog/templates/tailwind/mega_menu.html
+++ b/khoBlog/templates/tailwind/mega_menu.html
@@ -1,7 +1,7 @@
 {% extends 'tailwind/menu_sections.html' %}
 {% load links_menu menu_footer_set featured_post featured_page %}
 
-{% block menuu %}
+{% block menu %}
   {% if menu == "Main" %}
     <div class="grid grid-cols-2 items-start gap-y-10 gap-x-8 pt-10 pb-12">
       <div class="grid grid-cols-2 gap-y-10 gap-x-8">
@@ -53,4 +53,4 @@
       </div>
     </div>
   {% endif %}
-{% endblock menuu %}
+{% endblock menu %}
