--- a/khoBlog/templates/tailwind/menu_sections.html
+++ b/khoBlog/templates/tailwind/menu_sections.html
@@ -10,8 +10,8 @@
 
     <div class="relative bg-white dark:bg-jumbo-900">
       <div class="max-w-7xl mx-auto px-8">
-        {% block menuu %}
-        {% endblock menuu %}
+        {% block menu %}
+        {% endblock menu %}
       </div>
     </div>
   </section>
