--- a/lyrics/templates/lyrics/song_detail.html
+++ b/lyrics/templates/lyrics/song_detail.html
@@ -26,10 +26,9 @@
         <div class="prose dark:prose-invert lg:prose-lg xl:prose-xl">
           {% load markup_tags %}
           {{ song.lyrics|apply_markup:"markdown"|apply_markup:"widont" }}
-
-          <div class="border-t border-jumbo-100 dark:border-jumbo-700 pt-5">
-            <a href="{{ song.url_to_media }}" target="_blank" rel="noopener noreferrer">Find <span class="font-extrabold">{{ song }}</span>{% if not song.host == other %} on {{ song.get_host_display }}{% endif %}</a>
-          </div>
+        </div>
+        <div class="border-t border-jumbo-100 dark:border-jumbo-700 pt-5">
+          <a class="hover:underline" href="{{ song.url_to_media }}" target="_blank" rel="noopener noreferrer">Find <span class="font-extrabold">{{ song }}</span>{% if not song.host == other %} on {{ song.get_host_display }}{% endif %}</a>
         </div>
       </div>
   </article>
