--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -271,7 +271,23 @@
             }
 
             &
-                :is(a, strong, i, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6),
+                :is(
+                    a,
+                    strong,
+                    i,
+                    h1,
+                    h2,
+                    h3,
+                    h4,
+                    h5,
+                    h6,
+                    .h1,
+                    .h2,
+                    .h3,
+                    .h4,
+                    .h5,
+                    .h6
+                ),
             li::marker {
                 @apply text-inherit;
             }
@@ -326,14 +342,16 @@
         }
 
         &
-            :where(blockquote p:first-of-type):not(:where([class~="not-prose"]
-                    *))::before {
+            :where(blockquote p:first-of-type):not(
+                :where([class~="not-prose"] *)
+            )::before {
             content: "";
         }
 
         &
-            :where(blockquote p:last-of-type):not(:where([class~="not-prose"]
-                    *))::after {
+            :where(blockquote p:last-of-type):not(
+                :where([class~="not-prose"] *)
+            )::after {
             content: "";
         }
 
