--- a/khoBlog/templates/tailwind/mega_menu.html
+++ b/khoBlog/templates/tailwind/mega_menu.html
@@ -47,6 +47,7 @@
             Featured
           </p>
           <ul role="list" aria-labelledby="desktop-featured-heading-0" class="mt-6 space-y-6 sm:mt-4 sm:space-y-4">
+            {% featured_page_list %}
             {% featured_post_list %}
           </ul>
         </div>
